test(MatchingHistoryTest): 매칭 이력이 있는지 조회하는 테스트 추가